<resources>
    <string name="app_name">Gym App 93039</string>
    <string name="app_login_name">Gym App 93039 </string>
    <string name="login_name">LOGIN</string>
    <string name="no_account_text">Not yet Registered? Click Here.</string>
    <string name="profile">My Profile</string>
    <string name="gym_locations">Locations</string>
    <string name="workout">Begin Workout</string>
    <string name="menu_record">View Records</string>
    <string name="menu_instructor">View Instructors</string>
    <string name="menu_settings">Settings</string>
    <string name="register_name">Register</string>
    <string name="have_account_text">Already Registered? Click to Login</string>
    <string name="google_maps_api_key">AIzaSyA39i7xW3OINrJyJKjaO5uUM74ww6z1g7A</string>
    <string name="profile_details">Profile Details</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
