<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".HomeActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="3dp"
            android:src="@drawable/person"
            android:onClick="showMenu"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"

        android:layout_height="0dp">


    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:id="@+id/profile_layout"
                    android:clickable="true"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/person"
                        android:id="@+id/view_profile"
                        android:layout_width="55dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:text="@string/profile"
                        android:textAlignment="center"
                        android:id="@+id/profile"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:id="@+id/checkrecords_layout"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/record"
                        android:id="@+id/records"
                        android:layout_width="55dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:text="@string/menu_record"
                        android:textAlignment="center"
                        android:id="@+id/view_records"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/alarm"
                        android:id="@+id/workouts"
                        android:layout_width="55dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:text="@string/workout"
                        android:textAlignment="center"
                        android:id="@+id/working"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/map_card"
                android:layout_width="125dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:clickable="true"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/map_pic"
                        android:src="@drawable/map"
                        android:layout_width="55dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/map_text"
                        android:text="@string/gym_locations"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="2"
            android:padding="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:clickable="true"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/instructor"
                        android:id="@+id/instructors"
                        android:layout_width="55dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:text="@string/menu_instructor"
                        android:id="@+id/instructor"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="125dp"
                android:layout_height="140dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:clickable="true"
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logout_icon"
                        android:src="@drawable/icon_logout"
                        android:layout_width="55dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/logout_textView"
                        android:text="@string/menu_logout"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>